# simuletic-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/configs/: cctv_weapon_detection.yaml
src/simuletic/: __init__.py  cli.py  config.py
src/simuletic/datasets/: __init__.py  validation.py
src/simuletic_core/: __init__.py  cli.py
src/simuletic_core/backends/: __init__.py  base.py  rfdetr.py
src/simuletic_core/datasets/: __init__.py  validation.py
src/simuletic_vision/: __init__.py  cli.py  config.py
src/simuletic_vision/backends/: __init__.py  base.py  rfdetr.py
src/simuletic_vision/datasets/: __init__.py  validation.py
tests/: test_backends.py  test_cli.py  test_config.py  test_dataset_validation.py  test_import.py  test_package_metadata.py
