[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simuletic-vision"
version = "0.1.0"
description = "Python toolkit for synthetic-to-real computer vision workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Simuletic" },
]
keywords = [
  "computer-vision",
  "synthetic-data",
  "synthetic-to-real",
  "benchmarking",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2",
  "pyyaml>=6",
  "rich>=13.7",
  "rfdetr>=1.2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
  "tomli>=2; python_version < '3.11'",
]

[project.scripts]
simuletic-vision = "simuletic_vision.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/simuletic_vision"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
  "W",
]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
disallow_untyped_decorators = false
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = [
  "rfdetr",
  "rfdetr.*",
  "rich.*",
  "typer",
  "typer.*",
  "yaml",
]

ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
